2005-11-01  Romain Francoise  <romain@orebokech.com>

	* vc-sccs.el: Update copyright year.
	* ezimage.el: Likewise.

2005-11-01  KOBAYASHI Yasuhiro <kobayays@otsukakj.co.jp>  (tiny change)

	* info.el (Info-fontify-node): Use `string-width' for fontifying
	underlined titles.

2005-11-01  Juri Linkov  <juri@jurta.org>

	* info.el (Info-fontify-node): Downcase node header keywords Node,
	Prev, Next, Up before comparison.
	(Info-history): Insert absolute directory name, and put invisible
	property on it.

2005-11-01  Juri Linkov  <juri@jurta.org>

	* info.el (Info-file-supports-index-cookies): New variable.
	(Info-find-node-2): Check makeinfo version for index cookie support.
	(Info-index-nodes): Search for nodes with index cookies only when
	Info-file-supports-index-cookies is t.  Otherwise, search nodes
	with "Index" in the node name.
	(Info-index-node): Search index cookie in the current node only when
	Info-file-supports-index-cookies is t.  Otherwise, check the word
	"Index" in the node name.
	(Info-find-emacs-command-nodes): Remove code that searches nodes
	with "Index" node name in the top menu.

2005-11-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/scheme.el (scheme-mode-variables): Use the default
	comment-indent-function.

	* faces.el (face-attribute): Handle the case where a face inherits from
	a non-existent face.

	* simple.el (eval-expression-print-format): Use lisp-readable syntax
	for octal and hexa output, and merge the char into the paren.
	(kill-new): Use push.
	(copy-to-buffer): Use with-current-buffer.
	(completion-setup-function): Move code in loop to remove redundancy.
	(minibuffer-local-must-match-map): Don't add bindings that duplicate
	those inherited from minibuffer-local-completion-map.

	* savehist.el (savehist-mode) <defcustom>:
	Use custom-set-minor-mode if available.
	(savehist-mode) <defun>: Run the minor mode hook, set the custom state
	and emit a message if applicable.

2005-11-01  Hrvoje Niksic  <hniksic@xemacs.org>
